# corne_zmk_v1

./: build.yaml
config/: CMakeLists.txt  corne.conf  corne.keymap  nice_view_logo.h  west.yml
config/src/: screen.c
